# Stereogum-to-Apple-Music-Playlist-Automator

./: README.md  pyproject.toml
stereogum_automator/: apple_music.py  cli.py  models.py  scraper.py  state.py
